conexión a db & paginación en filtro de usuarios